[fix]invisible text input (safari)

--- a/web/static/css/login.css
+++ b/web/static/css/login.css
@@ -12,6 +12,7 @@
     margin-right: 5px;
     color: #737373;
     border-radius: 5px;
+    -webkit-user-select : auto;
 }
 
 .button {
